# esp32-s3_hub

./: .gitignore  LED_GUIDE.md  build_and_save_log.bat  function.txt  memo.txt  package-lock.json  package.json  partitions.csv  sdkconfig  sdkconfig.defaults.esp32s3  server_http.js  server_mqtt.js
code/: 0911.txt  0916.txt  1013.txt  1103.txt  ble로 앱과 양방향 통신 확인.txt  ble로 앱과 양방향 통신_idf_id,pw,email_macAddress조회.txt  ble로 앱과 양방향 통신_idf_id,pw.txt  분리 후 양방향 통신 코드_main.txt
main/: CMakeLists.txt  SNTP_ROLLBACK.txt  ble_client.c  ble_client.h  ble_device.c  ble_device.h  ble_gatt.c  ble_gatt.h  device_collector.c  device_collector.h  gpio_control.c  gpio_control.h  http_client.c  http_client.h  hub_led.c  hub_led.h  hub_sntp.c  hub_sntp.h  idf_component.yml  main.c  mqtt.c  mqtt.h  nvs_manager.c  nvs_manager.h  psram_impl_enable_wrap.c  usb.c  usb.h  web_socket.c  web_socket.h  wifi_manager.c  wifi_manager.h
