idf_component_register(SRCS "usb.c" "mqtt.c" "device_collector.c" "ble_device.c" "gpio_control.c" "ble_client.c" "nvs_manager.c" "main.c" "http_client.c" "ble_gatt.c" "wifi_manager.c" "web_socket.c"
                    INCLUDE_DIRS "."
                    REQUIRES "esp_http_client" "nvs_flash" "esp_wifi" "esp_netif" "esp_event" "bt" "mbedtls" "esp_http_server" "driver" "freertos" "esp_common" "esp_timer" "json" "led_strip" "mqtt")